# weekly-task-manager

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  podman-compose.yml
.github/workflows/: release.yml  rust-ci.yml
Container/: Containerfile.backend  Containerfile.frontend
common/: Cargo.toml
common/src/: lib.rs
javascript-client/: client-app.html  dashboard-app.html
server/: Cargo.toml
server/src/: colors.rs  database.rs  handlers.rs  lib.rs  main.rs  routes.rs
server/tests/: integration_tests_server.rs
